# bazel_rules_js_ts_and_proto_example

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  REPO.bazel  eslint.config.mjs  go.mod  lint.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements_lock.txt  tsconfig.json
backend/cppapp/: BUILD  main.cpp
backend/goapp/: BUILD  README.md  main.go
backend/golib/: BUILD  fortune.go
backend/golib/fortune/: BUILD
backend/itest/: BUILD.bazel  itest.py
backend/jsapp/: BUILD  package.json
backend/jsapp/src/: index.js  index.mjs
backend/jslib/: BUILD  jest.config.js  jest.config.mjs  package.json
backend/jslib/src/: index.js  index.mjs  jslib.js  jslib.mjs
backend/jslib/test/: jslib.test.mjs  tmp.test.js
backend/myapp/: BUILD  package.json
backend/myapp/src/: index.js
backend/mylib/: BUILD  package.json
backend/mylib/src/: index.d.ts  index.js
backend/proto/: BUILD  README.md  package.json  proto_loader_gen_types.sh
backend/proto/example/: BUILD  hello_api.proto  thing.proto
backend/proto/example/other/: BUILD  other_api.proto
backend/proto/example/thing/: BUILD  hello_api.proto  thing.proto
backend/proto/other/: other_api.proto
backend/pyapp/: BUILD  main.py  main_test.py
backend/tools/pytest/: pytest_test.bzl
backend/tsapp/: BUILD  compile_proto.sh  package.json
backend/tsapp/src/: index.ts
tools/lint/: .clang-tidy  .flake8  BUILD.bazel  buf.yaml  linters.bzl
tools/node_proto_library/: node_proto_library.bzl
tools/pytest/: pytest_test.bzl
