load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@gazelle//:def.bzl", "gazelle")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@tsconfig/node16-strictest",  #keep
    ],
)

js_library(
    name = "pkg",
    srcs = ["package.json"],
    visibility = ["//visibility:public"],
)

# Read more: https://rules-python.readthedocs.io/en/latest/pypi/lock.html
# Use `bazel run //:requirements.update` to update requirements_lock.txt file
# Use `bazel run //:requirements.test` to test that it is up to date
compile_pip_requirements(
    name = "requirements",
    src = "pyproject.toml",
    requirements_txt = "requirements_lock.txt",
)

gazelle(name = "gazelle")

js_library(
    name = "eslintrc",
    srcs = ["eslint.config.mjs"],
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@eslint/js",
        "//:node_modules/typescript-eslint",
        "//:node_modules/@typescript-eslint/parser",
        "//:node_modules/@typescript-eslint/eslint-plugin",
    ],
)
