# NOTE: This was taken from https://github.com/aspect-build/rules_lint/blob/4ba6e3f5299a02e93dd461a1716dd2d737b8be2a/example/tools/lint/BUILD.bazel
"""Definition of the formatter binary

This is in its own package because it has so many loading-time symbols,
we don't want to trigger eager fetches of these for builds that don't want to run format.
"""

load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@npm//:eslint/package_json.bzl", eslint_bin = "bin")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

package(default_visibility = ["//:__subpackages__"])

# ./bazelisk run //tools/lint:buf -- --help
alias(
    name = "buf",
    actual = "@rules_buf_toolchains//:buf",
)

# ./bazelisk run //tools/lint:flake8 -- --help
py_console_script_binary(
    name = "flake8",
    pkg = "@pypi//flake8:pkg",
)

# ./bazelisk run //tools/lint:eslint -- --help
eslint_bin.eslint_binary(name = "eslint")
f

exports_files(
    [
        "buf.yaml",
        ".flake8",
        ".ruff.toml",
        ".shellcheckrc",
        ".clang-tidy",
    ],
    visibility = ["//visibility:public"],
)
